[IDE] 입력 기능 구현